# cashflow

./: .dockerignore  .gitignore  Dockerfile  README.md  db_workbench.py  deploy.sh  docker-compose.yml  expenses.csv  frontend-notes.md  migrate_data.py  mongo-backup.sh  mongo-restore.sh  notes.json  ofxtools.md  package.json  process_ally_transactions.py  prompts.py  pyproject.toml  pytest.ini  res.xml  restore_db_full.sh  run.py  run_tests.py  setup.py  tmp.txt
api/: __init__.py  requirements.txt
aws/: Dockerfile  create_expenses.py  deploy.py  main.py  prompts.py  run_api.py  workbench.py  zip_layer.py
backups/: account.json  asset.json  bill.json  borrow.json  debt.json  expense.json  income.json  networth.json  paycheck.json  purchase.json  repayment.json  sale.json
cdk.out/: cashflow-production-root-stack.assets.json  cashflow-production-root-stack.template.json  cashflowproductionrootstackcashflowproductiondynamdbstack7F035DF9.nested.template.json  manifest.json  tree.json
mongo-volume/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--1073888763677094387.wt  collection-0--8732346427959388153.wt  collection-10--1073888763677094387.wt  collection-11--1073888763677094387.wt  collection-12--1073888763677094387.wt  collection-14--1073888763677094387.wt  collection-18--1073888763677094387.wt  collection-19--1073888763677094387.wt  collection-2--1073888763677094387.wt  collection-2--8732346427959388153.wt  collection-3--1073888763677094387.wt  collection-4--1073888763677094387.wt  collection-4--8732346427959388153.wt  collection-5--1073888763677094387.wt  collection-7--8732346427959388153.wt  index-1--1073888763677094387.wt  index-1--8732346427959388153.wt  index-13--1073888763677094387.wt  index-15--1073888763677094387.wt  index-16--1073888763677094387.wt  index-17--1073888763677094387.wt  index-20--1073888763677094387.wt  index-21--1073888763677094387.wt  index-3--8732346427959388153.wt  index-5--8732346427959388153.wt  index-6--1073888763677094387.wt  index-6--8732346427959388153.wt  index-7--1073888763677094387.wt  index-8--1073888763677094387.wt  index-8--8732346427959388153.wt  index-9--1073888763677094387.wt  (+2 more)
(+946 files in other folders)
