[tool.poetry]
name = "cashflow2"
version = "1.0.0"
description = ""
authors = ["Addison Freeman <addisonfreeman91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
Flask-Cors = "^3.0.10"
python-dotenv = "^0.20.0"
cryptocompare = "^0.7.5"
yahoo-fin = "^0.8.9"
pydash = "^5.1.0"
bcrypt = "^4.0.1"
plaid-python = "^21.1.0"

[tool.poetry.group.dev.dependencies]
inquirer = "^2.10.0"
black = "^22.3.0"
fabric = "^2.7.0"
pylint = "^2.13.4"

[tool.poetry.group.aws.dependencies]
aws-cdk-lib = "^2.102.0"
pynamodb = "^5.5.0"
pynamodb-attributes = "^0.4.0"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
